Added icon, chanfged name, added poppup

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,11 @@
-<p>Hello</p>
+<h3>Send WhatsApp Message</h3>
+<div>
+    <label>Mobile Number</label>
+    <input type="number" name="mobile" id="mobile">
+
+    <label>Message</label>
+    <textarea name="text" rows="4" style="width: 100%;" id="text"></textarea>
+
+    <input type="button" value="Send" id="sendButton" style="float: right; margin-top: 10px;">
+</div>
+<script src="src/popup.js"></script>
