--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<h3>Send WhatsApp Message</h3>
+<h3>Send WA Message</h3>
 <div>
     <label>Mobile Number</label>
     <input type="number" name="mobile" id="mobile">
