added status check

--- a/test-example.html
+++ b/test-example.html
@@ -82,10 +82,27 @@
             border-radius: 4px;
             margin: 10px 0;
         }
+        .back-button {
+            background-color: #6c757d;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 14px;
+            margin-bottom: 20px;
+            display: inline-block;
+            transition: background-color 0.3s;
+        }
+        .back-button:hover {
+            background-color: #5a6268;
+            text-decoration: none;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <a href="index.html" class="back-button">← Back to Home</a>
         <h1>🚀 WhatsApp Web Bridge Test</h1>
         <p style="text-align: center; color: #666;">
             Make sure WhatsApp Web is open in another tab and you're logged in.
