remove default number

--- a/test-example.html
+++ b/test-example.html
@@ -111,7 +111,7 @@
         <!-- Promise-based API Test -->
         <div class="section">
             <h2>🔥 Promise-based API (Modern)</h2>
-            <input type="text" id="promiseMobile" placeholder="Mobile number (with country code, e.g., 918879331633)" value="918879331463">
+            <input type="text" id="promiseMobile" placeholder="Mobile number (with country code, e.g., 918879331633)" value="">
             <textarea id="promiseMessage" placeholder="Your message" rows="3">Hello! This is a test message using Promise API 🚀</textarea>
             <button onclick="sendMessagePromise()" id="promiseBtn">Send Message (Promise)</button>
             <div id="promiseLog" class="log"></div>
@@ -120,7 +120,7 @@
         <!-- Legacy Event-based API Test -->
         <div class="section">
             <h2>⚡ Legacy Event-based API (Backward Compatibility)</h2>
-            <input type="text" id="eventMobile" placeholder="Mobile number (with country code, e.g., 918879331633)" value="918879331463">
+            <input type="text" id="eventMobile" placeholder="Mobile number (with country code, e.g., 918879331633)" value="">
             <textarea id="eventMessage" placeholder="Your message" rows="3">Hello! This is a test message using Legacy API 📱</textarea>
             <button onclick="sendMessageEvent()" id="eventBtn">Send Message (Event)</button>
             <div id="eventLog" class="log"></div>
@@ -129,7 +129,7 @@
         <!-- Media Test -->
         <div class="section">
             <h2>📷 Media Message Test</h2>
-            <input type="text" id="mediaMobile" placeholder="Mobile number" value="918879331463">
+            <input type="text" id="mediaMobile" placeholder="Mobile number" value="">
             <textarea id="mediaMessage" placeholder="Caption for media" rows="2">Check out this image! 📸</textarea>
             <input type="file" id="mediaFile">
             <button onclick="sendMediaMessage()" id="mediaBtn">Send Media (Promise)</button>
