--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         
         <div style="margin-top: 40px; font-size: 14px; color: #999;">
-            <p>© 2024 WhatsApp Web Bridge | <a href="https://github.com/naranarethiya/whatsapp-web-interaction-suite/README.md" target="_blank">Documentation</a></p>
+            <p>© 2024 WhatsApp Web Bridge | <a href="https://github.com/naranarethiya/whatsapp-web-interaction-suite" target="_blank">Documentation</a></p>
         </div>
     </div>
 
